--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,19 @@
 
 {% block content %}
 
-<h1>SUCCESS! 123</h1>
+<h1>Home page</h1>
+
+{% for post in posts %}
+
+<h2>{{ post.title }}</h2>
+<div>{{ post.date }}</div>
+<ul>
+  {% for tag in post.tags %}
+    <li>{{ tag }}</li>
+  {% endfor %}
+</ul>
+<a href="{{ url_for('post', slug=post.slug) }}">Read more ...</a>
+
+{% endfor %}
 
 {% endblock %}
