add Caddyfile to serve static assets

--- a/app/templates/admin/edit.html
+++ b/app/templates/admin/edit.html
@@ -8,4 +8,26 @@
 {{ post_id }}
 </p>
 
+<!-- text fields
+title
+slug
+pub-date
+category
+tags (comma separated)
+draft (checkbox)
+-->
+
+<!-- PREVIEW button -->
+<!-- save post and open current post in new tab -->
+
+<!-- UPLOAD MEDIA -->
+<!--
+media stored in filesystem (limit size by 1MB)
+path, MIME, post-id stored in media DB table
+-->
+
+<!-- simpleMD text editor -->
+
+<!-- SAVE button -->
+
 {% endblock %}
