--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -4,4 +4,24 @@
 
 <h1>Admin page</h1>
 
+<!-- new post button -->
+<!--
+create new post in database
+redirect to /edit/<post_id>
+-->
+
+<!-- table of posts -->
+<!-- 
+| title | last edit | pub date | slug | cat | tags | draft |
+EDIT Button
+-->
+
+<!-- table of comments -->
+<!-- 
+| post | name | comment | date | approved CHECKBOX |
+SAVE button data-id="<comment-id>"
+-->
+
+<!-- manage media -->
+
 {% endblock %}
