--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -4,4 +4,24 @@
 
 <h1>Admin Login page</h1>
 
+<form name="login" action="" method="post" accept-charset="utf-8">
+
+  {{ form.hidden_tag() }}
+
+  {{ form.username.label }}
+  {{ form.username(size=32) }}
+  {% for error in form.username.errors %}
+    <span style="color: red"> {{ error }} </span>
+  {% endfor %}
+
+  {{ form.password.label }}
+  {{ form. password(size=32) }}
+  {% for error in form.password.errors %}
+    <span style="color: red"> {{ error }} </span>
+  {% endfor %}
+
+  {{ form.submit() }}
+
+</form>
+
 {% endblock %}
