--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 {% for post in posts %}
 
 <h2>{{ post.title }}</h2>
-<div>{{ post.date }}</div>
+<div class="uk-text-meta">{{ post.date }}</div>
 <ul>
   {% for tag in post.tags %}
     <li>{{ tag }}</li>
