add media page with delete function

--- a/app/templates/admin/_input.html
+++ b/app/templates/admin/_input.html
@@ -9,3 +9,4 @@
 {%- endmacro %}
 
 {% set btn = "input-reset ba b--blue bg-blue white pa2 mr2 dim pointer" %}
+{% set btn_warning = "input-reset ba b--orange bg-orange white pa2 mr2 dim pointer" %}
