--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
   </main>
 
   {% block javascript %}{% endblock %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
 
   </body>
 </html>
